--- a/LibraryStore/web/index.html
+++ b/LibraryStore/web/index.html
@@ -19,7 +19,7 @@
                         <div class="col-lg-9 col-md-9 col-sm-12 col-xs-12 "> 
 
                             <div class="row">
-                                <div class="logo col-lg-5 col-md-5 col-sm-5 col-xs-3"> </div>
+                                <div class="logo col-lg-5 col-md-5 col-sm-5 col-xs-5"><img src="image/logo.png"/> </div>
 
                                 <div class="search col-lg-4 col-md-4 col-sm-4 col-xs-4"> 
                                     <form class="navbar-form" role="search">
